--- a/composer.json
+++ b/composer.json
@@ -30,31 +30,34 @@
     },
     "require": {
         "php": ">=8.3",
-        "doctrine/doctrine-bundle": "^2.12",
-        "doctrine/orm": "^3.2",
-        "symfony/config": "^6",
-        "symfony/dependency-injection": "^6",
-        "symfony/http-kernel": "^6"
+        "doctrine/doctrine-bundle": "^3.2",
+        "doctrine/orm": "^3.6",
+        "symfony/config": "^7.4",
+        "symfony/dependency-injection": "^7.4",
+        "symfony/http-kernel": "^7.4"
     },
     "require-dev": {
-        "brianium/paratest": "^6.11",
-        "doctrine/doctrine-fixtures-bundle": "^3.5",
-        "liip/test-fixtures-bundle": "^3.0",
-        "phpunit/phpunit": "^9.6",
-        "symfony/phpunit-bridge": "^6",
-        "symfony/uid": "^6",
-        "symfony/yaml": "^6"
+        "brianium/paratest": "^7.16",
+        "doctrine/doctrine-fixtures-bundle": "^4.3",
+        "liip/test-fixtures-bundle": "^3.7",
+        "phpunit/phpunit": "^12.5",
+        "symfony/uid": "^7.4",
+        "symfony/yaml": "^7.4",
+        "symfony/runtime": "^7.4"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "symfony/runtime": true
+        }
     },
     "extra": {
         "symfony": {
-            "require": "6.4.*",
+            "require": "7.4.*",
             "allow-contrib": true
         },
         "branch-alias": {
-            "dev-main": "0.4.x-dev"
+            "dev-main": "0.5.x-dev"
         }
     }
 }
