--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -3,8 +3,8 @@ name: "Continuous Integration"
 on: push
 
 jobs:
-    phpunit-and-psalm:
-        uses: dontdrinkandroot/github-actions/.github/workflows/php-symfony-bundle.yml@main
+    phpunit:
+        uses: dontdrinkandroot/github-actions/.github/workflows/php-symfony-bundle-phpunit.yml@main
         secrets: inherit
     #
     #    phpstan:
@@ -13,7 +13,6 @@ jobs:
 
     sonarcloud:
         uses: dontdrinkandroot/github-actions/.github/workflows/php-sonarcloud.yml@main
-        needs: phpunit-and-psalm
+        needs: phpunit
         with:
             project-key: 'dontdrinkandroot_doctrine-key-value-storage-bundle.php'
-        secrets: inherit
