fix(ci): Fixing secrets

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -16,3 +16,4 @@ jobs:
         needs: phpunit
         with:
             project-key: 'dontdrinkandroot_doctrine-key-value-storage-bundle.php'
+        secrets: inherit
